--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sanity/client": "^2.23.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sanitize-html": "^2.6.1"
   }
 }
